8288883: C2: assert(allow_address || t != T_ADDRESS) failed after JDK-8283091

Reviewed-by: kvn, mdoerr